# LidarRoofSegNet

./: .gitignore  README.md  ablation.config.js  building3d.config.js  dataSplit.ipynb  data_augmentation.py  datapre.ipynb  harvest.config.js  labelling.ipynb  labelling_m.ipynb  matrix.config.js  post_processing.py  pre.ipynb  pyproject.toml  qualitative.config.js  reproduce.config.js  requirements.txt  roof_segmentation_dgcnn_best.pth  sweep.config.js  test.ipynb  testneva.ipynb  testneva_2.ipynb  testneva_3.ipynb  trainModel.py  training.config.js  val_threshold.config.js  vis_training.ipynb  visual.ipynb
configs/: folds.json
evaluation_results/: ablation_handtuned.json  ablation_handtuned_summary.json  ablation_lightgbm.json  ablation_lightgbm_summary.json  ablation_matrix.csv  ablation_raw.json  ablation_raw_summary.json  building3d_handtuned.json  building3d_handtuned_summary.json  building3d_lgb06.json  building3d_lgb06_summary.json  building3d_raw.json  building3d_raw_summary.json  evaluation_summary.json  matrix_dgcnn_handtuned_summary.json  matrix_dgcnn_lgb06.json  matrix_dgcnn_lgb06_summary.json  matrix_dgcnn_off.json  matrix_dgcnn_off_summary.json  matrix_rg_handtuned.json  matrix_rg_handtuned_summary.json  matrix_rg_lgb06.json  matrix_rg_lgb06_summary.json  matrix_rg_off.json  matrix_rg_off_summary.json  matrix_softmax_handtuned.json  matrix_softmax_handtuned_summary.json  matrix_softmax_lgb06.json  matrix_softmax_lgb06_summary.json  matrix_softmax_off.json  matrix_softmax_off_summary.json  scene_000.txt  scene_001.txt  scene_002.txt  scene_003.txt  (+111 more)
(+94 files in other folders)
